<resources>
    <string name="app_name">Sound Board</string>
    <string name="action_settings">Settings</string>
    <string name="forest_noise">Forest Sound</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="water_noise">Dripping Rain </string>
    <string name="_3">3</string>
    <string name="animal_noise">Cricket Chirps</string>
    <string name="_4">4</string>
    <string name="white_noise">White Noise</string>
    <string name="pausebutton">PauseButton</string>
    <string name="playbutton">PlayButton</string>
    <string name="about">About</string>
    <string name="dark_mode_key">Dark Mode</string>
    <string name="display_header">Display</string>
    <string name="dark_mode_off">Never Use Dark Mode</string>
    <string name="dark_mode_on">Use Dark Mode [Unless Disabled in Settings]</string>
    <string name="settings_activity_title">Settings</string>

</resources>